# pytorch_from_zero

./: .gitignore  LICENSE  NOTES.md  README.md  pyproject.toml
00-setup/: README.md  check_env.py
00-setup/doc/: 00-setup.md
01-tensor-basics/: README.md
01-tensor-basics/doc/: 01-tensor-basics.md
01-tensor-basics/examples/: 01_create_and_check.py  02_device_move.py  03_numpy_interop.py  04_shape_ops.py  05_transformer_qkv.py  06_index_and_memory.py
01-tensor-basics/exercises/: 01_create.py  02_device.py  03_numpy.py  04_shape.py  05_broadcast.py
02-autograd/: README.md
02-autograd/doc/: 02-autograd.md
02-autograd/examples/: 01_requires_grad.py  02_forward_backward.py  03_grad_accumulate.py  04_no_grad.py  05_manual_gd.py
02-autograd/exercises/: 01_basic_grad.py  02_accumulate.py  03_no_grad.py  04_linear_step.py  05_train_loop.py
03-attention/: README.md
03-attention/doc/: 03-attention.md
03-attention/examples/: 01_embedding_tensor.py  02_unsqueeze_squeeze.py  03_reshape_transpose.py  04_expand_repeat.py  05_cat_stack.py  06_matmul.py  07_manual_attention.py  08_sdpa_compare.py  09_multi_head.py  10_mask_visualize.py  11_batch_size.py
03-attention/exercises/: 01_multi_head_attention.py  02_causal_mask.py  03_sdpa_attention.py
03-dataset-dataloader/: README.md
03-dataset-dataloader/doc/: 03-dataset-dataloader.md
03-dataset-dataloader/examples/: 03_list_dataset.py
03-dataset-dataloader/exercises/: 01_my_dataset.py  03_transforms.py  05_cifar10.py
04-attention/: README.md
04-attention/doc/: 04-attention.md
04-attention/examples/: 01_demo.py  01_embedding_tensor.py  02_mask_compare.py  02_unsqueeze_squeeze.py  03_batch_size_compare.py  03_reshape_transpose.py  04_expand_repeat.py  05_cat_stack.py  06_matmul.py  07_manual_attention.py  08_sdpa_compare.py  09_multi_head.py  10_mask_visualize.py  11_batch_size.py
04-attention/exercises/: 01_multi_head_attention.py  02_causal_mask.py  03_sdpa_attention.py  04_merge_heads.py  merge_heasds.py
04-attention/src/: attention_tools.py
04-fastapi/: README.md
04-fastapi/doc/: 04-fastapi.md
04-fastapi/examples/: 01_hello_world.py  04_pydantic_types.py  08_auth_api_key.py  09_cors_frontend.py  10_layered_architecture.py  11_testclient.py
04-fastapi/exercises/: 02_pydantic_validator.py  05_websocket.py  06_auth_api_key.py  07_cors.py  08_layered.py  09_testclient.py
05-dataset-dataloader/: README.md
05-dataset-dataloader/doc/: 05-dataset-dataloader.md
05-dataset-dataloader/examples/: 01_dataset_class.py  02_dataloader_basics.py  04_transforms.py  05_train_val_split.py  06_mnist_load.py
05-dataset-dataloader/exercises/: 02_dataloader.py  04_split.py
05-pretrained-models/: README.md
05-pretrained-models/doc/: 05-pretrained-models.md
05-pretrained-models/examples/: 01_model_zoo.py  02_inference.py  (+2 more)
06-cnn/: README.md
06-pretrained-models/: README.md
07-cnn/: README.md
07-experiments/: README.md
08-experiments/: README.md
08-fastapi/: README.md
papers/: Attention_Is_All_You_Need_CN.md  README.md
tools/: migrate_chapters.py  rename_inner_docs.py  replace_chapter_refs.py  swap_dataset_fastapi.py
(+41 files in other folders)
